--- a/trunk/ddscanner/app/src/main/res/layout/item_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_sealife.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
+<LinearLayout
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="10dp"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="134dp"
-    android:layout_gravity="center"
-    card_view:cardCornerRadius="2dp"
-    card_view:cardElevation="4dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@drawable/white_background_rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:elevation="2dp">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -31,6 +24,5 @@
                 android:textColor="@color/black_text"
                 android:layout_width="match_parent"
                 android:layout_height="34dp"
-                android:background="@color/orange" />
+                android:background="@drawable/bottom_orange_button" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
