~ avatar default picture

--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -54,6 +54,7 @@
                                 android:layout_height="80dp"
                                 android:layout_marginLeft="20dp"
                                 android:layout_marginRight="20dp"
+                                android:src="@drawable/avatar_profile_default"
                                 app:loadImageFrom="@{profileFragmentViewModel}" />
                             <LinearLayout
                                 android:paddingTop="3dp"
