--- a/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
@@ -71,13 +71,16 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/forgot_password_btn"/>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_above="@+id/privacy_policy"
+        android:layout_marginBottom="30dp">
     <LinearLayout
         android:id="@+id/fb_custom"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@+id/forgot_password"
-        android:layout_marginTop="68dp"
         android:background="@drawable/fb_login_btn_background"
         android:orientation="horizontal"
         android:gravity="center">
@@ -119,7 +122,7 @@
             android:textColor="@color/white"/>
 
         </LinearLayout>
-
+    </LinearLayout>
     <TextView
         android:layout_alignParentBottom="true"
         android:id="@+id/privacy_policy"
