--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -305,4 +305,25 @@
         <item name="android:background">@null</item>
     </style>
 
+    <style name="DiveCenterProfileCharacteristicIcon">
+        <item name="android:layout_width">63dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">18dp</item>
+    </style>
+
+    <style name="DiveCenterProfileCharacteristicName">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black_text</item>
+    </style>
+
+    <style name="DiveCenterProfileCharacteristicDesciption">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#8b8b8b</item>
+        <item name="android:layout_marginTop">3dp</item>
+    </style>
+
 </resources>
