--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -326,4 +326,9 @@
         <item name="android:layout_marginTop">3dp</item>
     </style>
 
+    <style name="ListTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black_text</item>
+    </style>
+
 </resources>
