--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -324,6 +324,18 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#8b8b8b</item>
         <item name="android:layout_marginTop">3dp</item>
+    </style>
+
+    <style name="DiveCenterProfileEditText">
+        <item name="android:textColor">@color/black_text</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColorHint">#bbbbbb</item>
+        <item name="et_dividerColor">#dedede</item>
+        <item name="et_dividerHeight">1dp</item>
+        <item name="et_dividerPadding">2dp</item>
+        <item name="et_labelEnable">true</item>
+        <item name="et_labelTextColor">#bbbbbb</item>
+        <item name="et_labelTextSize">12sp</item>
     </style>
 
 </resources>
