--- a/trunk/ddscanner/app/src/main/res/layout/dialog_achievemnt_achieved.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_achievemnt_achieved.xml
@@ -27,6 +27,7 @@
         android:gravity="center"
         tools:text="Your first check in brought you first points! Make more to get the title of diver."/>
     <Button
+        android:id="@+id/close_button"
         android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="45dp"
