--- a/trunk/ddscanner/app/src/main/res/layout/activity_sealife_full.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_sealife_full.xml
@@ -66,8 +66,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
+                <com.rey.material.widget.ProgressView
+                    android:id="@+id/progress_view"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="50dp"
+                    app:pv_autostart="true"
+                    app:pv_circular="true"
+                    app:pv_progressMode="indeterminate"
+                    app:pv_progressStyle="@style/CircularProgress" />
                 <LinearLayout
+                    android:visibility="gone"
+                    android:id="@+id/main_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
