--- a/trunk/ddscanner/app/src/main/res/layout/item_pending_achievment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_pending_achievment.xml
@@ -53,7 +53,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
-                        android:text="@{achievementViewModel.pendingAchievement.type}"
+                        android:text="@{achievementViewModel.pendingAchievement.name}"
                         android:textColor="@color/black_text" />
 
                     <TextView
@@ -63,7 +63,7 @@
                         android:layout_marginLeft="15dp"
                         android:textColor="#959595"
                         android:textSize="11sp"
-                        android:text="@{achievementViewModel.pendingAchievement.country}"/>
+                        android:text="@{achievementViewModel.pendingAchievement.countryName}"/>
                 </LinearLayout>
 
                 <TextView
