+ like/dislike photos

--- a/trunk/ddscanner/app/src/main/res/layout/activity_slider.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_slider.xml
@@ -68,6 +68,7 @@
         android:layout_height="400dp"
         android:layout_gravity="center" />
     <RelativeLayout
+        android:id="@+id/likes_layout"
         android:layout_gravity="bottom"
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
@@ -78,11 +79,11 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_like_photo_empty"/>
         <TextView
+            android:id="@+id/likes_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/icon"
             android:textColor="#dee9ed"
-            android:text="74"
             android:textSize="15sp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"/>
