--- a/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
@@ -55,6 +55,7 @@
             android:layout_centerInParent="true" />
     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:visibility="gone"
