--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -329,6 +329,7 @@
                                     android:onClick="@{handlers::mapsButtonClicked}"/>
 
                                 <ImageView
+                                    android:visibility="gone"
                                     android:layout_alignParentRight="true"
                                     android:id="@+id/add_photos_buton"
                                     android:layout_width="wrap_content"
