--- a/trunk/ddscanner/app/src/main/res/drawable/shark_progress_background.xml
+++ b/trunk/ddscanner/app/src/main/res/drawable/shark_progress_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#2e80a0" />
+    <solid android:color="#526cae" />
     <corners android:radius="2dp" />
 </shape>
