--- a/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
@@ -1,70 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:background="@color/primary"
-        android:minHeight="?actionBarSize"
-        auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        auto:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:contentInsetLeft="0dp"
-        android:contentInsetStart="0dp"
-        app:contentInsetLeft="0dp"
-        app:contentInsetStart="0dp"
-        android:contentInsetRight="0dp"
-        android:contentInsetEnd="0dp"
-        app:contentInsetRight="0dp"
-        app:contentInsetEnd="0dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="?actionBarSize"
+            android:background="@color/primary"
+            android:contentInsetEnd="0dp"
+            android:contentInsetLeft="0dp"
+            android:contentInsetRight="0dp"
+            android:contentInsetStart="0dp"
+            android:minHeight="?actionBarSize"
+            app:contentInsetEnd="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
+            auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            auto:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/toolbar_tablayout"
-                style="@style/ToolbarTabLayout"
-                android:layout_height="match_parent"
-                app:layout_widthPercent="60%"
-                auto:tabIndicatorColor="@android:color/transparent" />
-            <android.support.percent.PercentRelativeLayout
-                android:id="@+id/menu_items_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:animateLayoutChanges="true"
-                app:layout_widthPercent="40%"
-                android:layout_toRightOf="@+id/toolbar_tablayout">
-            <ImageView
-                android:id="@+id/filter_menu_button"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackground"
-                android:scaleType="center"
-                android:src="@drawable/ic_ac_filter"
-                app:layout_widthPercent="50%" />
+            <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/search_location_menu_button"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/filter_menu_button"
-                android:background="?attr/selectableItemBackground"
-                android:scaleType="center"
-                android:src="@drawable/ic_ac_search"
-                app:layout_widthPercent="50%" />
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/toolbar_tablayout"
+                    style="@style/ToolbarTabLayout"
+                    android:layout_height="match_parent"
+                    app:layout_widthPercent="60%"
+                    auto:tabIndicatorColor="@android:color/transparent" />
+
+                <android.support.percent.PercentRelativeLayout
+                    android:id="@+id/menu_items_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/toolbar_tablayout"
+                    android:animateLayoutChanges="true"
+                    app:layout_widthPercent="40%">
+
+                    <ImageView
+                        android:id="@+id/filter_menu_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="?attr/selectableItemBackground"
+                        android:scaleType="center"
+                        android:src="@drawable/ic_ac_filter"
+                        app:layout_widthPercent="50%" />
+
+                    <ImageView
+                        android:id="@+id/search_location_menu_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_toRightOf="@+id/filter_menu_button"
+                        android:background="?attr/selectableItemBackground"
+                        android:scaleType="center"
+                        android:src="@drawable/ic_ac_search"
+                        app:layout_widthPercent="50%" />
+                </android.support.percent.PercentRelativeLayout>
+
+                <android.support.percent.PercentRelativeLayout
+                    android:id="@+id/account_change_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/toolbar_tablayout"
+                    android:animateLayoutChanges="true"
+                    android:visibility="gone"
+                    app:layout_widthPercent="40%">
+
+                    <ImageView
+                        android:id="@+id/change_account"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:background="?attr/selectableItemBackground"
+                        android:scaleType="center"
+                        android:src="@drawable/ic_ac_tab_acc"
+                        app:layout_widthPercent="50%" />
+                </android.support.percent.PercentRelativeLayout>
             </android.support.percent.PercentRelativeLayout>
-        </android.support.percent.PercentRelativeLayout>
-    </android.support.v7.widget.Toolbar>
+        </android.support.v7.widget.Toolbar>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/main_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/main_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
