--- a/trunk/ddscanner/app/src/main/res/layout/item_account.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_account.xml
@@ -18,12 +18,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textColor="@color/black_text"
             tools:text="Francis warner"/>
         <TextView
+            android:id="@+id/user_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="12sp"
