--- a/trunk/ddscanner/app/src/main/res/layout/item_account.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_account.xml
@@ -33,6 +33,8 @@
             tools:text="Diver"/>
     </LinearLayout>
     <ImageView
+        android:visibility="gone"
+        android:id="@+id/active_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
